Customized searchbar, sidebar, dashboard and app.jsx with react router

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,10 +5,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
   }
-  
   body {
     margin: 0;
+    width: 100vw;
     font-family: 'Open Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
