--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-
-* html {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+  html{
+    font-family: 'Inter,sans-serif';
+    line-height: 1.3
+  }
+  table {
+  }
+  th,
+  td{
+    @apply py-3 px-2.5 text-sm text-left border-y border-gray-200;
+  }
+  thead {
+    @apply bg-neutral-100;
+  }
+  th {
+    @apply font-semibold;
+  }
+
+  a{
+    @apply text-sky-500 hover:underline;
+  }
+}
